// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb component should handle home clicked 1`] = `
<Component
  aria-label="Breadcrumb"
>
  <Component
    id="breadcrumb-home"
    onClick={[Function]}
    to="#"
  >
    Home
  </Component>
  <Component
    to="/tutorial/1"
  >
    Unit Test Walkthrough
  </Component>
  <Component
    aria-current="page"
    isActive={true}
  >
    Task 1 of 3
  </Component>
</Component>
`;

exports[`Breadcrumb component should render breadcrumb with props 1`] = `
<Component
  aria-label="Breadcrumb"
>
  <Component
    id="breadcrumb-home"
    onClick={[Function]}
    to="#"
  >
    Home
  </Component>
  <Component
    to="/tutorial/1"
  >
    Unit Test Walkthrough
  </Component>
  <Component
    aria-current="page"
    isActive={true}
  >
    Task 1 of 3
  </Component>
</Component>
`;

exports[`Breadcrumb component should render default breadcrumb 1`] = `
<Component
  aria-label="Breadcrumb"
>
  <Component
    id="breadcrumb-home"
    onClick={[Function]}
    to="#"
  >
    Home
  </Component>
</Component>
`;
